fix button plus pruimary on mobile

--- a/mdl-skeleton-default/complements.styl
+++ b/mdl-skeleton-default/complements.styl
@@ -714,7 +714,7 @@ mdlButton-disabled($bg=gray, $col=#fff, $col2=gray , args...)
     #efor-add-signature:hover ~ .efor-menu
     .efor-menu:hover
         opacity 1
-        bottom 100%
+        bottom 115px
 
         a
             animation showMenuButtons ease-in-out 500ms
@@ -728,7 +728,7 @@ mdlButton-disabled($bg=gray, $col=#fff, $col2=gray , args...)
         right 0
         bottom 0%
         display block
-        height 100px
+        height 50px
         position absolute
         text-align center
         margin auto
